welding in a virtual unix root for windoze
since windows is too dumb to have a top-level root folder, we need to rely on the virtualization environment that is getting us the features we rely on, which usually come from unix (or linux).  the toolsets used in the past for this include MSYS, Cygwin, and possibly others.  this release is starting to support Cygwin and others will be added as time permits.

--- a/scripts/cgi/paths.ini
+++ b/scripts/cgi/paths.ini
@@ -1,3 +1,5 @@
 [Common]
+# simple cgi paths.ini to point at different logging when really running.
+#hmmm: not sure this is still useful or necessary; is it being honored on running systems with feisty?
 LogPath=/tmp/cgi-bin-logs
 
