--- a/production/paths.ini
+++ b/production/paths.ini
@@ -1,3 +1,8 @@
 [Common]
+# default logging path that users can alter if needed.
 LogPath=$FEISTY_MEOW_GENERATED_STORE/logs
+# default location of virtual root directory for Unix.
+# replaced at runtime on windoze if cygwin is available.
+#hmmm: support msys too at some point?  very worthy as well.
+VirtualUnixRoot=c:/cygwin
 
