updates from orpheus for windoze build
most turn out to be removing win32 specializations, which is very tasty.
others involved getting new code in place, like the filename change.

--- a/production/assign_bases/makefile
+++ b/production/assign_bases/makefile
@@ -1,9 +1,9 @@
 include cpp/variables.def
 
 PROJECT = rebaser
-ifeq "$(OP_SYSTEM)" "WIN32"
-  TARGETS = perform_rebasing
-endif
+#ifeq "$(OP_SYSTEM)" "WIN32"
+#  TARGETS = perform_rebasing
+#endif
 TYPE = hierarchy
 
 include cpp/rules.def
