updates to fix bundler on win32
needed to get rid of variable flags including forward slash, which totally conflicted with paths using forward slash, and caused mayhem.

--- a/nucleus/applications/bundler/makefile
+++ b/nucleus/applications/bundler/makefile
@@ -12,6 +12,7 @@ include variables.def
 # hopefully this approach of having a neutral outer
 # maker will get rid of that broken behavior.
 
+PROJECT = bundler_app
 LAST_TARGETS = maker
 OTHER_CLEANS = breaker
 
