checking in the recent efforts at optimizing clam
moved many variables that were constructed during every make out into
the environment.  cleaned up convoluted shell commands to make more
efficient.  removed old compiler tags that were hiding chunks of code.

still need to get the create guid app online; was not working due to
errors in comdef.h from cygwin (could not find new.h, some kind of
snafu in the cygwin headers).

--- a/nucleus/tools/simple_utilities/makefile
+++ b/nucleus/tools/simple_utilities/makefile
@@ -10,6 +10,9 @@ TARGETS = create_guid.exe playsound.exe short_path.exe sleep_ms.exe \
 ifeq "$(OMIT_VERSIONS)" ""
   SOURCE += simple_utils_version.rc
 endif
+ifeq "$(OPERATING_SYSTEM)" "WIN32"
+  LIBS_USED += winmm
+endif
 DEFINITIONS += __BUILD_STATIC_APPLICATION__
 UNDEFINITIONS += ENABLE_MEMORY_HOOK ENABLE_CALLSTACK_TRACKING
 
