--- a/production/prototype_config.ini
+++ b/production/prototype_config.ini
@@ -68,7 +68,7 @@ endif
 # this flag selects whether to build with unicode enabled.  this mainly affects
 # win32 OSes, and right now we know it affects them badly if this is enabled.
 # unix may build slightly differently too, such as for WX widgets.
-ifeq "$(OP_SYSTEM)" "WIN32"
+ifeq "$(OPERATING_SYSTEM)" "WIN32"
 ###
 ### do not enable on win32 right now.
 ###  DEFINITIONS += UNICODE=t
