--- a/production/assign_bases/makefile
+++ b/production/assign_bases/makefile
@@ -1,7 +1,7 @@
 include cpp/variables.def
 
 PROJECT = rebaser
-#ifeq "$(OP_SYSTEM)" "WIN32"
+#ifeq "$(OPERATING_SYSTEM)" "WIN32"
 #  TARGETS = perform_rebasing
 #endif
 TYPE = hierarchy
