--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -68,7 +68,7 @@ endif
 # this flag selects whether to build with unicode enabled.  this mainly affects
 # win32 OSes, and right now we know it affects them badly if this is enabled.
 # unix may build slightly differently too, such as for WX widgets.
-ifneq "$(OP_SYSTEM)" "WIN32"
+ifneq "$(OPERATING_SYSTEM)" "WIN32"
 #  DEFINITIONS += UNICODE=t
 endif
 
