simplify per compiler rules and variables
most of the specialized bits, like wxwidgets and curl, were the same for
each compiler, so these have been abstracted out to common area.  the
individual compiler sections are now a lot tighter or maybe almost
non-existent.

--- a/production/feisty_meow_config.ini
+++ b/production/feisty_meow_config.ini
@@ -3,7 +3,7 @@
 # specifies the version of the code that is being constructed here.
 major=2
 minor=140
-revision=183
+revision=184
 build=420
 
 # specifies the remainder of the version record info.
@@ -18,7 +18,7 @@ web_site=http://feistymeow.org
 # if DEBUG is not empty, then code is built with more debugging information.
 DEBUG=t
 # if NOISY is non-empty, there will be more information emitted during builds.
-#NOISY=t
+NOISY=t
 
 # if this is turned on, then all warnings are turned on and they are
 # considered errors.
