--- a/kona/osgi/org.feistymeow.bundle.servicesOSGi/.project
+++ b/kona/osgi/org.feistymeow.bundle.servicesOSGi/.project
@@ -27,8 +27,8 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.pde.PluginNature</nature>
+<!--		<nature>org.eclipse.pde.PluginNature</nature> -->
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.pde.api.tools.apiAnalysisNature</nature>
+<!--  		<nature>org.eclipse.pde.api.tools.apiAnalysisNature</nature> -->
 	</natures>
 </projectDescription>
