--- a/kona/.classpath
+++ b/kona/.classpath
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1-sources.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-adapters-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-tests.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/junit-4.5.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.5.jar"/>
 	<classpathentry kind="lib" path="lib/SizeOf.jar"/>
-	<classpathentry kind="lib" path="lib/commons-compress-1.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="bin-eclipse"/>
 </classpath>
